--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -7,8 +7,12 @@
 
 <p>
   <strong>Produce:</strong>
-  <%= @review.produce %>
+  <%= @review.produce.name %>
 </p>
 
 <%= link_to 'Edit', edit_review_path(@review) %> |
+<% if @review.produce.nil? %>
 <%= link_to 'Back', reviews_path %>
+<% else %>
+<%= link_to 'Back', @review.produce %>
+<% end %>
