--- a/app/views/produces/index.html.erb
+++ b/app/views/produces/index.html.erb
@@ -1,5 +1,16 @@
 <p id="notice"><%= notice %></p>
 
+<header id="order">
+<h1>  Pick from any of our organic options </h1>
+</header>
+
+<div id="description">
+<p>
+  We offer a variety of fruits and vegetables,
+  all locally grown with no artifical preservatives.
+</p>
+</div>
+
 <h1>Listing Produces</h1>
 
 <table>
