--- a/app/assets/stylesheets/produces.css
+++ b/app/assets/stylesheets/produces.css
@@ -8,7 +8,7 @@ ul {
 
 
 body {
-  background-image: url('https://criticalexaminer.files.wordpress.com/2014/04/super-market-vegetable-rainbow-display.jpeg');
+  background-image: url('//criticalexaminer.files.wordpress.com/2014/04/super-market-vegetable-rainbow-display.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
 
@@ -23,7 +23,7 @@ body {
   border-style: dashed;
   border-color: green;
   margin: 2em;
-  background-image: url('http://www.constructionweekonline.com/pictures/CG%20pix%202/drone/banner_1.gif');
+  background-image: url('//www.constructionweekonline.com/pictures/CG%20pix%202/drone/banner_1.gif');
   background-size: cover;
   background-position: center;
 }
