--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -7,7 +7,7 @@ ul {
 }
 
 
-body {
+body.first {
   background-image: url('//i1031.photobucket.com/albums/y375/Stevie_Pinero/313129-earth-from-space-picsay_zps69t42vpd.jpg');
     background-size: cover;
     background-repeat: no-repeat;
