--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -8,7 +8,7 @@ ul {
 
 
 body.first {
-  background-image: url('//i1031.photobucket.com/albums/y375/Stevie_Pinero/313129-earth-from-space-picsay_zps69t42vpd.jpg');
+  background-image: url('http://i1031.photobucket.com/albums/y375/Stevie_Pinero/313129-earth-from-space-picsay_zps69t42vpd.jpg');
     background-size: cover;
     background-repeat: no-repeat;
 
