--- a/app/assets/stylesheets/reviews.css
+++ b/app/assets/stylesheets/reviews.css
@@ -2,3 +2,7 @@
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
 */
+/*p, h3{
+  background-color: rgba(100, 10, 39, 0.3);;
+  color: yellow;
+}*/
