--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,4 +13,9 @@
     <li>
       <%= link_to 'Order Now', produces_path %>
     </li>
+    <li>
+      <%= link_to 'FAQ'%>
+    </li>
+    <li>
+      <%= link_to 'Sign-in', log_in_path %>
   </p>
