--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -2,29 +2,35 @@
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
 */
+
 ul {
   list-style: none;
 }
-
-
 body.first {
-  background-image: url('http://i1031.photobucket.com/albums/y375/Stevie_Pinero/313129-earth-from-space-picsay_zps69t42vpd.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-
+  background-image: url('//i1031.photobucket.com/albums/y375/Stevie_Pinero/313129-earth-from-space-picsay_zps69t42vpd.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-
 #header {
   color: #8A2BE2;
   font-size: 2em;
 }
-
 #header:hover {
-		color: #999999;
-		text-decoration: none;
-		text-transform: uppercase;
-	}
+  color: #999999;
+  text-decoration: none;
+  text-transform: uppercase;
+}
 header p {
   color: #8A2BE2;
+}
+ul.DeliveryOptions li {
+  display: inline;
+}
 
+#faq {
+  background-color: orange;
+  border-radius: 1em;
+  border-color: black;
+  text-align: center;
+  color: black;
 }
