--- a/app/views/users/faq.html.erb
+++ b/app/views/users/faq.html.erb
@@ -47,3 +47,4 @@ Of course. Just call us at (305) 570-9768 and we'll provide you the details on h
 to join our network.
 </ul>
 </div>
+<%= link_to 'Home', root_path %>
