--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,7 +14,7 @@
       <%= link_to 'Order Now', produces_path %>
     </li>
     <li>
-      <%= link_to 'FAQ'%>
+      <%= link_to 'FAQ', faq_path %>
     </li>
     <li>
       <%= link_to 'Sign-in', log_in_path %>
