hope this url thing works

--- a/app/assets/stylesheets/produces.css
+++ b/app/assets/stylesheets/produces.css
@@ -23,7 +23,7 @@ body.second {
   border-style: dashed;
   border-color: green;
   margin: 2em;
-  background-image: url('banner_1.gif');
+  background-image: url('//www.constructionweekonline.com/pictures/CG%20pix%202/drone/banner_1.gif');
   background-size: cover;
   background-position: center;
 }
