--- a/app/assets/stylesheets/produces.css
+++ b/app/assets/stylesheets/produces.css
@@ -19,12 +19,11 @@ body.second {
   text-shadow: 1em 1em 1em black;
   font-size: 1.4em;
   background-color: #CC7A00;
-  opacity: 0.2;
   border-radius: 1em;
   border-style: dashed;
   border-color: green;
   margin: 2em;
-  background-image: url('//www.constructionweekonline.com/pictures/CG pix 2/drone/banner_1.gif');
+  background-image: url('images/banner_1.gif');
   background-size: cover;
   background-position: center;
 }
