--- a/app/assets/stylesheets/produces.css
+++ b/app/assets/stylesheets/produces.css
@@ -23,7 +23,7 @@ body.second {
   border-style: dashed;
   border-color: green;
   margin: 2em;
-  background-image: url('banner_1.jpg');
+  background-image: url('banner.jpg');
   background-size: cover;
   background-position: center;
 }
