--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<!-- Header -->
 <header id="header">
   <h1>AirGrub</h1>
   <p>
@@ -5,7 +6,7 @@
   </p>
 </header>
 
-<p id="MainMenu">
+<p id="mainmenu">
   <ul class="DeliveryOptions">
     <li>
       <%= link_to "Create profile", new_user_path %>
@@ -14,8 +15,8 @@
       <%= link_to 'Order Now', produces_path %>
     </li>
     <li>
-      <%= link_to 'FAQ', faq_path %>
+      <%= link_to 'Frequently Asked', faq_path %>
     </li>
     <li>
       <%= link_to 'Sign-in', log_in_path %>
-  </p>
+    </p>
