--- a/app/views/produces/index.html.erb
+++ b/app/views/produces/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<header class="order">
+<header id="order">
 <h1>Pick from any of our organic options </h1>
 </header>
 
