--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -48,6 +48,6 @@ font-weight: bold;
 margin: 1em;
 }
 
-ul.DeliveryOptions li {
+/*ul.DeliveryOptions li {
         display:inline;
-      }
+      }*/
