--- a/app/views/produces/edit.html.erb
+++ b/app/views/produces/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Produce</h1>
+<div id="faq"><h1>Editing Produce</h1></div>
 
 <%= render 'form' %>
 
+<div class="button">
 <%= link_to 'Show', @produce %> |
 <%= link_to 'Back', produces_path %>
+</div>
