--- a/app/views/produces/index.html.erb
+++ b/app/views/produces/index.html.erb
@@ -11,7 +11,8 @@
 </p>
 </div>
 
-<h1>Listing Produces</h1>
+<div id="faq"><h1>Produce</h1></div>
+
 
 <table>
   <thead>
@@ -38,6 +39,7 @@
 </table>
 
 <br>
-
-<%= link_to 'New Produce', new_produce_path %>
+<div class="button">
+<%= link_to 'New', new_produce_path %> |
 <%= link_to 'Home', root_path %>
+</div>
