--- a/app/views/produces/new.html.erb
+++ b/app/views/produces/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Produce</h1>
+<div id="faq"><h1>New Produce</h1></div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', produces_path %>
+<div class="button"><%= link_to 'Back', produces_path %></div>
