--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,15 +8,16 @@
 
 <p id="mainmenu">
   <ul class="DeliveryOptions">
-    <li>
+    <li class="button">
       <%= link_to "Create profile", new_user_path %>
     </li>
-    <li>
+    <li class="button">
       <%= link_to 'Order Now', produces_path %>
     </li>
-    <li>
+    <li class="button">
       <%= link_to 'Frequently Asked', faq_path %>
     </li>
-    <li>
+    <li class="button">
       <%= link_to 'Sign-in', log_in_path %>
+    </li>
     </p>
