--- a/app/views/produces/show.html.erb
+++ b/app/views/produces/show.html.erb
@@ -1,3 +1,4 @@
+<div id="faq">
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -26,6 +27,8 @@
 
 <h3>New Review</h3>
 <%= render 'reviews/form'%>
-
+</div>
+<div class="button">
 <%= link_to 'Edit', edit_produce_path(@produce) %> |
 <%= link_to 'Back', produces_path %>
+</div>
