--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign up!</h1>
+<div id="faq"><h1>Sign up!</h1></div>
 
 <%=form_for User.new do |f| %>
 <div class="field">
@@ -18,5 +18,6 @@
   <%=f.submit "Sign up" %>
   <% end %>
 </div>
-
+<div class="button">
 <%= link_to 'Home', root_path %>
+</div>
